--- a/registration.css
+++ b/registration.css
@@ -10,6 +10,12 @@ body {
 main {
   display: flex;
   flex-direction: auto;
+  align-items: center;
+}
+
+h1 {
+  font-size: 50px;
+  font-family: Helvetica, sans-serif;
 }
 
 .container {
@@ -38,14 +44,14 @@ main {
 .space {
   margin: 10px;
 }
-textarea {
-    width: 100%;
-    height: 150px;
-    padding: 12px 20px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-    font-size: 16px;
-    resize: none;
+text {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  font-size: 16px;
+  resize: none;
 }
