--- a/registration.css
+++ b/registration.css
@@ -55,3 +55,25 @@ text {
   font-size: 16px;
   resize: none;
 }
+
+.btn {
+  background-color: #37cc8a;
+  padding: 10px;
+  border: 0;
+  cursor: pointer;
+  color: white;
+  border-radius: 5px;
+}
+input[type="text"],
+[type="email"],
+[type="password"],
+select,
+[type="phone"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
