--- a/registration.css
+++ b/registration.css
@@ -14,15 +14,21 @@ main {
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 40px;
+  font-weight: 100px;
   font-family: Helvetica, sans-serif;
 }
-
+.content {
+  font-family: Helvetica, sans-serif;
+  font-size: 15px;
+  line-height: 2em;
+}
 .container {
   padding: 5em;
 }
 .text {
-  margin: 5em;
+  margin-left: 15em;
+  margin-right: 5em;
 }
 
 .try {
@@ -42,6 +48,7 @@ h1 {
   padding: 40px;
   text-align: center;
   border-radius: 8px;
+  box-shadow: 5px 5px 5px rgba(62, 62, 62, 0.633);
 }
 
 .space {
@@ -70,8 +77,7 @@ text {
 input[type="text"],
 [type="email"],
 [type="password"],
-select,
-[type="phone"] {
+select {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
